# thecodedotreport

./: .gitignore  README.md  cli.py  package-lock.json  package.json  pyproject.toml  requirements.txt
Testprojects/CSharp/Project_DotNetCore/content/: dashboard.json
Testprojects/Project_DotNetCore/: msbuild.binlog
Testprojects/Project_DotNetCore/.tcdr/coverage/: coverage.json
app/: test_execution.py
content/: dashboard.json
endpoints/api/: dashboard.py  tests.py
sample-tcdr-app/: Dockerfile  requirements.txt
src/css/: app.css
src/ts/: mapper.ts  types.ts
src/ts/components/: Dashboard.tsx
src/ts/components/coverage/: Coverage.tsx
src/ts/dashboard/: coverlet.ts
src/ts/utils/: theme.ts
static/js/.vite/: manifest.json
static/js/assets/: app-BMBuyxxs.js  app-BMBuyxxs.js.map  app-BfGWCRDT.js  app-BfGWCRDT.js.map  app-CufyKrob.js  app-CufyKrob.js.map  app-Djn_OcsG.js  app-Djn_OcsG.js.map  app-v_mAtRjZ.js  app-v_mAtRjZ.js.map  dashboard-BT_ZbyUk.js  dashboard-BT_ZbyUk.js.map  dashboard-BWnkvnBP.js  dashboard-BWnkvnBP.js.map  dashboard-DTq0h-sj.js.map  dashboard-bwFjT801.js  dashboard-bwFjT801.js.map  dashboard-iZ33wglB.js  dashboard-iZ33wglB.js.map
tcdr/: cli.py  package-lock.json  package.json  requirements.txt
tcdr-app/: package-lock.json  tsconfig.json  vite.config.ts
tcdr-app/src/ts/: app.ts  mapper.ts  types.ts
tcdr/app/: responses.py  web.py
tcdr/app/features/: execute_tests.py  generate_props.py
tcdr/content/: dashboard.json
tcdr/endpoints/api/: tests.py
tcdr/features/: generate_props.py
tcdr/src/css/: app.css
(+24 files in other folders)
