[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tcdr"
version = "0.0.1"
requires-python = ">=3.9"
dependencies = ["jinja2>=3.1", "z8ter>=0.2.5", "z8ter-auth>=0.1"]

[project.scripts]
tcdr = "tcdr.cli:main"

[tool.setuptools.packages.find]
include = ["tcdr*"]

[tool.setuptools.package-data]
tcdr = ["templates/**/*.jinja", "templates/**/*.html", "static/**/*"]

[tool.ruff]
line-length = 79
[tool.ruff.lint]
select = ["E", "F", "W", "I"]
